packages/kbn-monaco/src/painless/antlr/PainlessParser.ts
// @ts-nocheck
// Generated from ./PainlessParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PainlessParserListener } from "./PainlessParserListener";

export class PainlessParser extends Parser {
	public static readonly WS = 1;
	public static readonly COMMENT = 2;
	public static readonly LBRACK = 3;
	public static readonly RBRACK = 4;
	public static readonly LBRACE = 5;
	public static readonly RBRACE = 6;
	public static readonly LP = 7;
	public static readonly RP = 8;
	public static readonly DOT = 9;
	public static readonly NSDOT = 10;
	public static readonly COMMA = 11;
	public static readonly SEMICOLON = 12;
	public static readonly IF = 13;
	public static readonly IN = 14;
	public static readonly ELSE = 15;
	public static readonly WHILE = 16;
	public static readonly DO = 17;
	public static readonly FOR = 18;
	public static readonly CONTINUE = 19;
	public static readonly BREAK = 20;
	public static readonly RETURN = 21;
	public static readonly NEW = 22;
	public static readonly TRY = 23;
	public static readonly CATCH = 24;
	public static readonly THROW = 25;
	public static readonly THIS = 26;
	public static readonly INSTANCEOF = 27;
	public static readonly BOOLNOT = 28;
	public static readonly BWNOT = 29;
	public static readonly MUL = 30;
	public static readonly DIV = 31;
	public static readonly REM = 32;
	public static readonly ADD = 33;
	public static readonly SUB = 34;
	public static readonly LSH = 35;
	public static readonly RSH = 36;
	public static readonly USH = 37;
	public static readonly LT = 38;
	public static readonly LTE = 39;
	public static readonly GT = 40;
	public static readonly GTE = 41;
	public static readonly EQ = 42;
	public static readonly EQR = 43;
	public static readonly NE = 44;
	public static readonly NER = 45;
	public static readonly BWAND = 46;
	public static readonly XOR = 47;
	public static readonly BWOR = 48;
	public static readonly BOOLAND = 49;
	public static readonly BOOLOR = 50;
	public static readonly COND = 51;
	public static readonly COLON = 52;
	public static readonly ELVIS = 53;
	public static readonly REF = 54;
	public static readonly ARROW = 55;
	public static readonly FIND = 56;
	public static readonly MATCH = 57;
	public static readonly INCR = 58;
	public static readonly DECR = 59;
	public static readonly ASSIGN = 60;
	public static readonly AADD = 61;
	public static readonly ASUB = 62;
	public static readonly AMUL = 63;
	public static readonly ADIV = 64;
	public static readonly AREM = 65;
	public static readonly AAND = 66;
	public static readonly AXOR = 67;
	public static readonly AOR = 68;
	public static readonly ALSH = 69;
	public static readonly ARSH = 70;
	public static readonly AUSH = 71;
	public static readonly OCTAL = 72;
	public static readonly HEX = 73;
	public static readonly INTEGER = 74;
	public static readonly DECIMAL = 75;
	public static readonly STRING = 76;
	public static readonly REGEX = 77;
	public static readonly TRUE = 78;
	public static readonly FALSE = 79;
	public static readonly NULL = 80;
	public static readonly PRIMITIVE = 81;
	public static readonly DEF = 82;
	public static readonly ID = 83;
	public static readonly DOTINTEGER = 84;
	public static readonly DOTID = 85;
	public static readonly RULE_source = 0;
	public static readonly RULE_function = 1;
	public static readonly RULE_parameters = 2;
	public static readonly RULE_statement = 3;
	public static readonly RULE_rstatement = 4;
	public static readonly RULE_dstatement = 5;
	public static readonly RULE_trailer = 6;
	public static readonly RULE_block = 7;
	public static readonly RULE_empty = 8;
	public static readonly RULE_initializer = 9;
	public static readonly RULE_afterthought = 10;
	public static readonly RULE_declaration = 11;
	public static readonly RULE_decltype = 12;
	public static readonly RULE_type = 13;
	public static readonly RULE_declvar = 14;
	public static readonly RULE_trap = 15;
	public static readonly RULE_noncondexpression = 16;
	public static readonly RULE_expression = 17;
	public static readonly RULE_unary = 18;
	public static readonly RULE_unarynotaddsub = 19;
	public static readonly RULE_castexpression = 20;
	public static readonly RULE_primordefcasttype = 21;
	public static readonly RULE_refcasttype = 22;
	public static readonly RULE_chain = 23;
	public static readonly RULE_primary = 24;
	public static readonly RULE_postfix = 25;
	public static readonly RULE_postdot = 26;
	public static readonly RULE_callinvoke = 27;
	public static readonly RULE_fieldaccess = 28;
	public static readonly RULE_braceaccess = 29;
	public static readonly RULE_arrayinitializer = 30;
	public static readonly RULE_listinitializer = 31;
	public static readonly RULE_mapinitializer = 32;
	public static readonly RULE_maptoken = 33;
	public static readonly RULE_arguments = 34;
	public static readonly RULE_argument = 35;
	public static readonly RULE_lambda = 36;
	public static readonly RULE_lamtype = 37;
	public static readonly RULE_funcref = 38;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"source", "function", "parameters", "statement", "rstatement", "dstatement", 
		"trailer", "block", "empty", "initializer", "afterthought", "declaration", 
		"decltype", "type", "declvar", "trap", "noncondexpression", "expression", 
		"unary", "unarynotaddsub", "castexpression", "primordefcasttype", "refcasttype", 
		"chain", "primary", "postfix", "postdot", "callinvoke", "fieldaccess", 
		"braceaccess", "arrayinitializer", "listinitializer", "mapinitializer", 
		"maptoken", "arguments", "argument", "lambda", "lamtype", "funcref",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'{'", "'}'", "'['", "']'", "'('", "')'", 
		"'.'", "'?.'", "','", "';'", "'if'", "'in'", "'else'", "'while'", "'do'", 
		"'for'", "'continue'", "'break'", "'return'", "'new'", "'try'", "'catch'", 
		"'throw'", "'this'", "'instanceof'", "'!'", "'~'", "'*'", "'/'", "'%'", 
		"'+'", "'-'", "'<<'", "'>>'", "'>>>'", "'<'", "'<='", "'>'", "'>='", "'=='", 
		"'==='", "'!='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'", 
		"':'", "'?:'", "'::'", "'->'", "'=~'", "'==~'", "'++'", "'--'", "'='", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'<<='", 
		"'>>='", "'>>>='", undefined, undefined, undefined, undefined, undefined, 
		undefined, "'true'", "'false'", "'null'", undefined, "'def'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WS", "COMMENT", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "LP", 
		"RP", "DOT", "NSDOT", "COMMA", "SEMICOLON", "IF", "IN", "ELSE", "WHILE", 
		"DO", "FOR", "CONTINUE", "BREAK", "RETURN", "NEW", "TRY", "CATCH", "THROW", 
		"THIS", "INSTANCEOF", "BOOLNOT", "BWNOT", "MUL", "DIV", "REM", "ADD", 
		"SUB", "LSH", "RSH", "USH", "LT", "LTE", "GT", "GTE", "EQ", "EQR", "NE", 
		"NER", "BWAND", "XOR", "BWOR", "BOOLAND", "BOOLOR", "COND", "COLON", "ELVIS", 
		"REF", "ARROW", "FIND", "MATCH", "INCR", "DECR", "ASSIGN", "AADD", "ASUB", 
		"AMUL", "ADIV", "AREM", "AAND", "AXOR", "AOR", "ALSH", "ARSH", "AUSH", 
		"OCTAL", "HEX", "INTEGER", "DECIMAL", "STRING", "REGEX", "TRUE", "FALSE", 
		"NULL", "PRIMITIVE", "DEF", "ID", "DOTINTEGER", "DOTID",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PainlessParser._LITERAL_NAMES, PainlessParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PainlessParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PainlessParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return PainlessParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PainlessParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PainlessParser._ATN, this);
	}
	// @RuleVersion(0)
	public source(): SourceContext {
		let _localctx: SourceContext = new SourceContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PainlessParser.RULE_source);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 78;
					this.function();
					}
					}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 5)) & ~0x1F) === 0 && ((1 << (_la - 5)) & ((1 << (PainlessParser.LBRACE - 5)) | (1 << (PainlessParser.LP - 5)) | (1 << (PainlessParser.IF - 5)) | (1 << (PainlessParser.WHILE - 5)) | (1 << (PainlessParser.DO - 5)) | (1 << (PainlessParser.FOR - 5)) | (1 << (PainlessParser.CONTINUE - 5)) | (1 << (PainlessParser.BREAK - 5)) | (1 << (PainlessParser.RETURN - 5)) | (1 << (PainlessParser.NEW - 5)) | (1 << (PainlessParser.TRY - 5)) | (1 << (PainlessParser.THROW - 5)) | (1 << (PainlessParser.BOOLNOT - 5)) | (1 << (PainlessParser.BWNOT - 5)) | (1 << (PainlessParser.ADD - 5)) | (1 << (PainlessParser.SUB - 5)))) !== 0) || ((((_la - 58)) & ~0x1F) === 0 && ((1 << (_la - 58)) & ((1 << (PainlessParser.INCR - 58)) | (1 << (PainlessParser.DECR - 58)) | (1 << (PainlessParser.OCTAL - 58)) | (1 << (PainlessParser.HEX - 58)) | (1 << (PainlessParser.INTEGER - 58)) | (1 << (PainlessParser.DECIMAL - 58)) | (1 << (PainlessParser.STRING - 58)) | (1 << (PainlessParser.REGEX - 58)) | (1 << (PainlessParser.TRUE - 58)) | (1 << (PainlessParser.FALSE - 58)) | (1 << (PainlessParser.NULL - 58)) | (1 << (PainlessParser.PRIMITIVE - 58)) | (1 << (PainlessParser.DEF - 58)) | (1 << (PainlessParser.ID - 58)))) !== 0)) {
				{
				{
				this.state = 84;
				this.statement();
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 90;
			this.match(PainlessParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function(): FunctionContext {
		let _localctx: FunctionContext = new FunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PainlessParser.RULE_function);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.decltype();
			this.state = 93;
			this.match(PainlessParser.ID);
			this.state = 94;
			this.parameters();
			this.state = 95;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public parameters(): ParametersContext {
		let _localctx: ParametersContext = new ParametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PainlessParser.RULE_parameters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.match(PainlessParser.LP);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 81)) & ~0x1F) === 0 && ((1 << (_la - 81)) & ((1 << (PainlessParser.PRIMITIVE - 81)) | (1 << (PainlessParser.DEF - 81)) | (1 << (PainlessParser.ID - 81)))) !== 0)) {
				{
				this.state = 98;
				this.decltype();
				this.state = 99;
				this.match(PainlessParser.ID);
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === PainlessParser.COMMA) {
					{
					{
					this.state = 100;
					this.match(PainlessParser.COMMA);
					this.state = 101;
					this.decltype();
					this.state = 102;
					this.match(PainlessParser.ID);
					}
					}
					this.state = 108;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 111;
			this.match(PainlessParser.RP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PainlessParser.RULE_statement);
		let _la: number;
		try {
			this.state = 117;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PainlessParser.IF:
			case PainlessParser.WHILE:
			case PainlessParser.FOR:
			case PainlessParser.TRY:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 113;
				this.rstatement();
				}
				break;
			case PainlessParser.LBRACE:
			case PainlessParser.LP:
			case PainlessParser.DO:
			case PainlessParser.CONTINUE:
			case PainlessParser.BREAK:
			case PainlessParser.RETURN:
			case PainlessParser.NEW:
			case PainlessParser.THROW:
			case PainlessParser.BOOLNOT:
			case PainlessParser.BWNOT:
			case PainlessParser.ADD:
			case PainlessParser.SUB:
			case PainlessParser.INCR:
			case PainlessParser.DECR:
			case PainlessParser.OCTAL:
			case PainlessParser.HEX:
			case PainlessParser.INTEGER:
			case PainlessParser.DECIMAL:
			case PainlessParser.STRING:
			case PainlessParser.REGEX:
			case PainlessParser.TRUE:
			case PainlessParser.FALSE:
			case PainlessParser.NULL:
			case PainlessParser.PRIMITIVE:
			case PainlessParser.DEF:
			case PainlessParser.ID:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 114;
				this.dstatement();
				this.state = 115;
				_la = this._input.LA(1);
				if (!(_la === PainlessParser.EOF || _la === PainlessParser.SEMICOLON)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rstatement(): RstatementContext {
		let _localctx: RstatementContext = new RstatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PainlessParser.RULE_rstatement);
		let _la: number;
		try {
			let _alt: number;
			this.state = 179;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				_localctx = new IfContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 119;
				this.match(PainlessParser.IF);
				this.state = 120;
				this.match(PainlessParser.LP);
				this.state = 121;
				this.expression();
				this.state = 122;
				this.match(PainlessParser.RP);
				this.state = 123;
				this.trailer();
				this.state = 127;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
				case 1:
					{
					this.state = 124;
					this.match(PainlessParser.ELSE);
					this.state = 125;
					this.trailer();
					}
					break;

				case 2:
					{
					this.state = 126;
					if (!( this._input.LA(1) != PainlessParser.ELSE )) {
						throw new FailedPredicateException(this, " this._input.LA(1) != PainlessParser.ELSE ");
					}
					}
					break;
				}
				}
				break;

			case 2:
				_localctx = new WhileContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 129;
				this.match(PainlessParser.WHILE);
				this.state = 130;
				this.match(PainlessParser.LP);
				this.state = 131;
				this.expression();
				this.state = 132;
				this.match(PainlessParser.RP);
				this.state = 135;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PainlessParser.LBRACK:
				case PainlessParser.LBRACE:
				case PainlessParser.LP:
				case PainlessParser.IF:
				case PainlessParser.WHILE:
				case PainlessParser.DO:
				case PainlessParser.FOR:
				case PainlessParser.CONTINUE:
				case PainlessParser.BREAK:
				case PainlessParser.RETURN:
				case PainlessParser.NEW:
				case PainlessParser.TRY:
				case PainlessParser.THROW:
				case PainlessParser.BOOLNOT:
				case PainlessParser.BWNOT:
				case PainlessParser.ADD:
				case PainlessParser.SUB:
				case PainlessParser.INCR:
				case PainlessParser.DECR:
				case PainlessParser.OCTAL:
				case PainlessParser.HEX:
				case PainlessParser.INTEGER:
				case PainlessParser.DECIMAL:
				case PainlessParser.STRING:
				case PainlessParser.REGEX:
				case PainlessParser.TRUE:
				case PainlessParser.FALSE:
				case PainlessParser.NULL:
				case PainlessParser.PRIMITIVE:
				case PainlessParser.DEF:
				case PainlessParser.ID:
					{
					this.state = 133;
					this.trailer();
					}
					break;
				case PainlessParser.SEMICOLON:
					{
					this.state = 134;
					this.empty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 3:
				_localctx = new ForContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 137;
				this.match(PainlessParser.FOR);
				this.state = 138;
				this.match(PainlessParser.LP);
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 5)) & ~0x1F) === 0 && ((1 << (_la - 5)) & ((1 << (PainlessParser.LBRACE - 5)) | (1 << (PainlessParser.LP - 5)) | (1 << (PainlessParser.NEW - 5)) | (1 << (PainlessParser.BOOLNOT - 5)) | (1 << (PainlessParser.BWNOT - 5)) | (1 << (PainlessParser.ADD - 5)) | (1 << (PainlessParser.SUB - 5)))) !== 0) || ((((_la - 58)) & ~0x1F) === 0 && ((1 << (_la - 58)) & ((1 << (PainlessParser.INCR - 58)) | (1 << (PainlessParser.DECR - 58)) | (1 << (PainlessParser.OCTAL - 58)) | (1 << (PainlessParser.HEX - 58)) | (1 << (PainlessParser.INTEGER - 58)) | (1 << (PainlessParser.DECIMAL - 58)) | (1 << (PainlessParser.STRING - 58)) | (1 << (PainlessParser.REGEX - 58)) | (1 << (PainlessParser.TRUE - 58)) | (1 << (PainlessParser.FALSE - 58)) | (1 << (PainlessParser.NULL - 58)) | (1 << (PainlessParser.PRIMITIVE - 58)) | (1 << (PainlessParser.DEF - 58)) | (1 << (PainlessParser.ID - 58)))) !== 0)) {
					{
					this.state = 139;
					this.initializer();
					}
				}

				this.state = 142;
				this.match(PainlessParser.SEMICOLON);
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 5)) & ~0x1F) === 0 && ((1 << (_la - 5)) & ((1 << (PainlessParser.LBRACE - 5)) | (1 << (PainlessParser.LP - 5)) | (1 << (PainlessParser.NEW - 5)) | (1 << (PainlessParser.BOOLNOT - 5)) | (1 << (PainlessParser.BWNOT - 5)) | (1 << (PainlessParser.ADD - 5)) | (1 << (PainlessParser.SUB - 5)))) !== 0) || ((((_la - 58)) & ~0x1F) === 0 && ((1 << (_la - 58)) & ((1 << (PainlessParser.INCR - 58)) | (1 << (PainlessParser.DECR - 58)) | (1 << (PainlessParser.OCTAL - 58)) | (1 << (PainlessParser.HEX - 58)) | (1 << (PainlessParser.INTEGER - 58)) | (1 << (PainlessParser.DECIMAL - 58)) | (1 << (PainlessParser.STRING - 58)) | (1 << (PainlessParser.REGEX - 58)) | (1 << (PainlessParser.TRUE - 58)) | (1 << (PainlessParser.FALSE - 58)) | (1 << (PainlessParser.NULL - 58)) | (1 << (PainlessParser.ID - 58)))) !== 0)) {
					{
					this.state = 143;
					this.expression();
					}
				}

				this.state = 146;
				this.match(PainlessParser.SEMICOLON);
				this.state = 148;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 5)) & ~0x1F) === 0 && ((1 << (_la - 5)) & ((1 << (PainlessParser.LBRACE - 5)) | (1 << (PainlessParser.LP - 5)) | (1 << (PainlessParser.NEW - 5)) | (1 << (PainlessParser.BOOLNOT - 5)) | (1 << (PainlessParser.BWNOT - 5)) | (1 << (PainlessParser.ADD - 5)) | (1 << (PainlessParser.SUB - 5)))) !== 0) || ((((_la - 58)) & ~0x1F) === 0 && ((1 << (_la - 58)) & ((1 << (PainlessParser.INCR - 58)) | (1 << (PainlessParser.DECR - 58)) | (1 << (PainlessParser.OCTAL - 58)) | (1 << (PainlessParser.HEX - 58)) | (1 << (PainlessParser.INTEGER - 58)) | (1 << (PainlessParser.DECIMAL - 58)) | (1 << (PainlessParser.STRING - 58)) | (1 << (PainlessParser.REGEX - 58)) | (1 << (PainlessParser.TRUE - 58)) | (1 << (PainlessParser.FALSE - 58)) | (1 << (PainlessParser.NULL - 58)) | (1 << (PainlessParser.ID - 58)))) !== 0)) {
					{
					this.state = 147;
					this.afterthought();
					}
				}

				this.state = 150;
				this.match(PainlessParser.RP);
				this.state = 153;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PainlessParser.LBRACK:
				case PainlessParser.LBRACE:
				case PainlessParser.LP:
				case PainlessParser.IF:
				case PainlessParser.WHILE:
				case PainlessParser.DO:
				case PainlessParser.FOR:
				case PainlessParser.CONTINUE:
				case PainlessParser.BREAK:
				case PainlessParser.RETURN:
				case PainlessParser.NEW:
				case PainlessParser.TRY:
				case PainlessParser.THROW:
				case PainlessParser.BOOLNOT:
				case PainlessParser.BWNOT:
				case PainlessParser.ADD:
				case PainlessParser.SUB:
				case PainlessParser.INCR:
				case PainlessParser.DECR:
				case PainlessParser.OCTAL:
				case PainlessParser.HEX:
				case PainlessParser.INTEGER:
				case PainlessParser.DECIMAL:
				case PainlessParser.STRING:
				case PainlessParser.REGEX:
				case PainlessParser.TRUE:
				case PainlessParser.FALSE:
				case PainlessParser.NULL:
				case PainlessParser.PRIMITIVE:
				case PainlessParser.DEF:
				case PainlessParser.ID:
					{
					this.state = 151;
					this.trailer();
					}
					break;
				case PainlessParser.SEMICOLON:
					{
					this.state = 152;
					this.empty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 4:
				_localctx = new EachContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 155;
				this.match(PainlessParser.FOR);
				this.state = 156;
				this.match(PainlessParser.LP);
				this.state = 157;
				this.decltype();
				this.state = 158;
				this.match(PainlessParser.ID);
				this.state = 159;
				this.match(PainlessParser.COLON);
				this.state = 160;
				this.expression();
				this.state = 161;
				this.match(PainlessParser.RP);
				this.state = 162;
				this.trailer();
				}
				break;

			case 5:
				_localctx = new IneachContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 164;
				this.match(PainlessParser.FOR);
				this.state = 165;
				this.match(PainlessParser.LP);
				this.state = 166;
				this.match(PainlessParser.ID);
				this.state = 167;
				this.match(PainlessParser.IN);
				this.state = 168;
				this.expression();
				this.state = 169;
				this.match(PainlessParser.RP);
				this.state = 170;
				this.trailer();
				}
				break;
